K1J-1525: Convert JAX-RS controllers to Spring MVC (#266)